--- a/cc_llama2_back/.gitignore
+++ b/cc_llama2_back/.gitignore
@@ -1,3 +1,4 @@
+
 # Logs
 logs
 *.log
@@ -40,6 +41,7 @@ build/Release
 
 # Dependency directories
 node_modules/
+model/
 .pnp/
 .pnp.js/
 jspm_packages/
