--- a/cc_llama2_back/package.json
+++ b/cc_llama2_back/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon src/app.js",
+    "dev": "nodemon src/app.ts",
     "test": "dotenv -e .env.test npm run prisma:migrate:deploy & dotenv -e .env.test jest -- -i"
   },
   "keywords": [],
@@ -22,8 +22,16 @@
     "node-llama-cpp": "^2.8.8"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.28",
     "dotenv-cli": "^7.4.1",
     "http-status": "^1.7.4",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "ttypescript": "^1.5.15",
+    "typescript": "^5.4.2",
+    "typescript-transform-paths": "^3.4.7"
   }
 }
